--- a/類別/lesson2.ipynb
+++ b/類別/lesson2.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Preson'>\n"
+     ]
+    }
+   ],
    "source": [
-    "class preson():\n",
-    "    pass"
+    "class Preson():\n",
+    "    pass\n",
+    "\n",
+    "p1:Preson = Preson()\n",
+    "print (type(p1))"
    ]
   }
  ],
