--- a/類別/lesson2.ipynb
+++ b/類別/lesson2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,8 @@
    ],
    "source": [
     "class Preson():\n",
+    "    def __init__(self):\n",
+    "        self.name = \"IAN\"\n",
     "    pass\n",
     "\n",
     "p1:Preson = Preson()\n",
