--- a/類別/lesson2.ipynb
+++ b/類別/lesson2.ipynb
@@ -2,25 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Preson'>\n"
+      "<class '__main__.Person'>\n",
+      "p1.name=Ian\n",
+      "p2.name=Sun\n"
      ]
     }
    ],
    "source": [
-    "class Preson():\n",
-    "    def __init__(self):\n",
-    "        self.name = \"IAN\"\n",
-    "    pass\n",
+    "class Person():\n",
+    "    def __init__(self,n:str):\n",
+    "        self.name = n\n",
     "\n",
-    "p1:Preson = Preson()\n",
-    "print (type(p1))"
+    "\n",
+    "p1:Person = Person(\"Ian\")\n",
+    "print (type(p1))\n",
+    "print(f\"p1.name={p1.name}\")\n",
+    "p1.name\n",
+    "\n",
+    "p2:Person = Person(\"Sun\")\n",
+    "p2.name\n",
+    "print(f\"p2.name={p2.name}\")\n",
+    "\n"
    ]
   }
  ],
