--- a/類別/lesson2.ipynb
+++ b/類別/lesson2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,8 @@
     "class Person():\n",
     "    def __init__(self,n:str):\n",
     "        self.name = n\n",
+    "    def  __repr__ (self):\n",
+    "        return f\"我是person的實體,我的名字是:{self.name}\" \n",
     "\n",
     "\n",
     "p1:Person = Person(\"Ian\")\n",
@@ -30,6 +32,63 @@
     "p2.name\n",
     "print(f\"p2.name={p2.name}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun\n",
+      "270\n",
+      "Ian Sun\n",
+      "250\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student(Person):\n",
+    "    def __init__(self,name:str,s:int):\n",
+    "        super().__init__(n=name)\n",
+    "        self.scores = s\n",
+    "    def  __repr__ (self):\n",
+    "        return f\"我是Student的實體,我的名字是:{self.name},我的分數是:{self.scores}\"     \n",
+    "\n",
+    "s1:Student = Student(name=\"Sun\",s=270)\n",
+    "print(s1.name)\n",
+    "print(s1.scores)\n",
+    "\n",
+    "s2:Student = Student(name=\"Ian Sun\",s=250)\n",
+    "print(s2.name)\n",
+    "print(s2.scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我是person的實體,我的名字是:Ian\n",
+      "我是Student的實體,我的名字是:Sun,我的分數是:270\n",
+      "我是person的實體,我的名字是:Sun\n",
+      "我是Student的實體,我的名字是:Ian Sun,我的分數是:250\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p1)\n",
+    "print(s1)\n",
+    "\n",
+    "print(p2)\n",
+    "print(s2)\n"
    ]
   }
  ],
