--- a/類別/lesson2.ipynb
+++ b/類別/lesson2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -44,32 +44,59 @@
      "output_type": "stream",
      "text": [
       "Sun\n",
-      "270\n",
-      "Ian Sun\n",
-      "250\n"
+      "Ian Sun\n"
      ]
     }
    ],
    "source": [
     "class Student(Person):\n",
-    "    def __init__(self,name:str,s:int):\n",
+    "    def __init__(self,name:str,chinese:int,english:int,math:int):\n",
     "        super().__init__(n=name)\n",
-    "        self.scores = s\n",
+    "        self.__chinese=chinese\n",
+    "        self.__english=english\n",
+    "        self.__math=math\n",
+    "\n",
+    "    @property\n",
+    "    def chinese(self):\n",
+    "            return self.__chinese\n",
+    "\n",
+    "    @property\n",
+    "    def english(self):\n",
+    "            return self.__english\n",
+    "\n",
+    "    @property\n",
+    "    def math(self):\n",
+    "            return self.__math\n",
+    "\n",
+    "    @property\n",
+    "    def scores(self):\n",
+    "        return self.__chinese+self.__english+self.__math\n",
+    "\n",
+    "    #自訂實體的方法(method)\n",
+    "    def average(self):\n",
+    "        return self.scores / 3\n",
+    "\n",
+    "\n",
+    "\n",
     "    def  __repr__ (self):\n",
-    "        return f\"我是Student的實體,我的名字是:{self.name},我的分數是:{self.scores}\"     \n",
+    "        message= f\"我是Student的實體,我的名字是:{self.name}\\n\"\n",
+    "        message += f\"國文分數:{self.chinese}\\n\"\n",
+    "        message += f\"國文分數:{self.english}\\n\"\n",
+    "        message += f\"國文分數:{self.math}\\n\"\n",
+    "        return message\n",
     "\n",
-    "s1:Student = Student(name=\"Sun\",s=270)\n",
+    "\n",
+    "s1:Student = Student(name=\"Sun\",chinese=89,english=72,math=94)\n",
     "print(s1.name)\n",
-    "print(s1.scores)\n",
     "\n",
-    "s2:Student = Student(name=\"Ian Sun\",s=250)\n",
-    "print(s2.name)\n",
-    "print(s2.scores)"
+    "\n",
+    "s2:Student = Student(name=\"Ian Sun\",math=65,chinese=84,english=92)\n",
+    "print(s2.name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -77,9 +104,17 @@
      "output_type": "stream",
      "text": [
       "我是person的實體,我的名字是:Ian\n",
-      "我是Student的實體,我的名字是:Sun,我的分數是:270\n",
+      "我是Student的實體,我的名字是:Sun\n",
+      "國文分數:89\n",
+      "國文分數:72\n",
+      "國文分數:94\n",
+      "\n",
       "我是person的實體,我的名字是:Sun\n",
-      "我是Student的實體,我的名字是:Ian Sun,我的分數是:250\n"
+      "我是Student的實體,我的名字是:Ian Sun\n",
+      "國文分數:84\n",
+      "國文分數:92\n",
+      "國文分數:65\n",
+      "\n"
      ]
     }
    ],
@@ -89,6 +124,35 @@
     "\n",
     "print(p2)\n",
     "print(s2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我是Student的實體,我的名字是:Sun\n",
+      "國文分數:89\n",
+      "國文分數:72\n",
+      "國文分數:94\n",
+      "\n",
+      "總分:255\n",
+      "平均:85.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# s1\n",
+    "# s1.chinese =89\n",
+    "# s1.english =72\n",
+    "# s1.math =100\n",
+    "print(s1)\n",
+    "print(f\"總分:{s1.scores}\")#property\n",
+    "print(f\"平均:{s1.average()}\")#method"
    ]
   }
  ],
