--- a/結構/project1/list.ipynb
+++ b/結構/project1/list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,172 @@
     "l1= [2,4,6,8,10]\n",
     "#查元素數量\n",
     "print(len(l1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(l1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1.append(12)\n",
+    "print(l1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in l1:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
+      "(1, 4)\n",
+      "(2, 6)\n",
+      "(3, 8)\n",
+      "(4, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in enumerate(l1):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#tuple的拆解法\n",
+    "(index,value)=(0,2)  #小括號可省略\n",
+    "print(index)\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "==========\n",
+      "1\n",
+      "4\n",
+      "==========\n",
+      "2\n",
+      "6\n",
+      "==========\n",
+      "3\n",
+      "8\n",
+      "==========\n",
+      "4\n",
+      "10\n",
+      "==========\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (index,value) in enumerate(l1):\n",
+    "    print(index)\n",
+    "    print(value)\n",
+    "    print(\"==========\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index,value in enumerate(l1):\n",
+    "    print(index)\n",
+    "    print(value)\n",
+    "    print(\"==========\")"
    ]
   }
  ],
