--- a/結構/project1/list.ipynb
+++ b/結構/project1/list.ipynb
@@ -76,6 +76,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4 6 8 10\n",
+      "索引編號,超出範圍\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(l1[0],end=\" \")\n",
+    "print(l1[1],end=\" \")\n",
+    "print(l1[2],end=\" \")\n",
+    "print(l1[3],end=\" \")\n",
+    "print(l1[4])\n",
+    "try:\n",
+    "    print(l1[5])\n",
+    "except IndexError:\n",
+    "    print(\"索引編號,超出範圍\")    \n",
+    "except Exception as e:\n",
+    "    print(f\"不知名的錯誤:{e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -183,6 +211,96 @@
     "    print(index)\n",
     "    print(value)\n",
     "    print(\"==========\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n",
+      "o\n",
+      "b\n",
+      "e\n",
+      "r\n",
+      "t\n",
+      " \n",
+      "H\n",
+      "s\n",
+      "u\n"
+     ]
+    }
+   ],
+   "source": [
+    "name:str = \"Robert Hsu\"\n",
+    "for word in name:\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'R'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "#[index]\n",
+    "name[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robert\n",
+      "Robert\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[slice]\n",
+    "print(name[0:6])\n",
+    "print(name[:6]) #前6個"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hs\n",
+      "Hsu\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[slice]\n",
+    "print(name[-3:-1])\n",
+    "print(name[-3:]) #取最後3個"
    ]
   }
  ],
