--- a/結構/_complex.ipynb
+++ b/結構/_complex.ipynb
@@ -24,6 +24,19 @@
     "]\n",
     "students\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students:list[dict]=[\n",
+    "{\"name\":\"Ian\",\"chinese\":78,\"english\":92,\"math\":65},\n",
+    "{\"name\":\"Jenny\",\"chinese\":78,\"english\":92,\"math\":65},\n",
+    "{\"name\":\"Amy\",\"chinese\":78,\"english\":92,\"math\":65},\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
