--- a/結構/set.ipynb
+++ b/結構/set.ipynb
@@ -93,6 +93,34 @@
     "u1:set=s3.intersection(s4)\n",
     "u1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[43, 38, 37, 35, 24, 19, 7]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "lot:set =set()\n",
+    "\n",
+    "while len(lot)<7:\n",
+    "    lot.add(random.randint(1,49))\n",
+    "\n",
+    "lot_list:list[int]=list(lot)\n",
+    "lot_list.sort(reverse=True)\n",
+    "lot_list"
+   ]
   }
  ],
  "metadata": {
