--- a/window/lesson1.ipynb
+++ b/window/lesson1.ipynb
@@ -21,6 +21,56 @@
     "file.close()\n",
     "file.closed"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('names.txt',encoding=\"utf-8\") as file:\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "299"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('names.txt',encoding=\"utf-8\") as file:\n",
+    "    content:str =file.read()\n",
+    "names:list[str]=content.split()\n",
+    "len(names)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
