--- a/pydantic/dataclass1.ipynb
+++ b/pydantic/dataclass1.ipynb
@@ -39,6 +39,46 @@
     "\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "及格\n",
+      "不及格\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student(Person):\n",
+    "    @classmethod\n",
+    "    def get_student(cls,name:str,age:int,scores:int):\n",
+    "        return Student(n=name, a=age, scores=scores)\n",
+    "\n",
+    "    def __init__(self,n:str,a:int,scores:int):\n",
+    "        super().__init__(n,a)\n",
+    "        self.scores = scores\n",
+    "\n",
+    "    def get_level(self)->str:\n",
+    "        if self.scores >= 60:\n",
+    "            return \"及格\"\n",
+    "        else:\n",
+    "            return \"不及格\"\n",
+    "        \n",
+    "#透過init建立的\n",
+    "s1 = Student(\"徐國堂\",a=30,scores=80)\n",
+    "print(s1.get_level())\n",
+    "\n",
+    "#透過classmethod,建立實體\n",
+    "s2 = Student.get_student(\"robert\",43,59)\n",
+    "print(s2.get_level())\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
