--- a/pydantic/pydantic1.ipynb
+++ b/pydantic/pydantic1.ipynb
@@ -17,17 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name='手機套' unit_price=150.5 quantity_on_hand=0\n",
-      "手機套\n",
-      "150.5\n",
-      "0\n"
+     "ename": "NameError",
+     "evalue": "name 'InventoryItem' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m item1\u001b[38;5;241m=\u001b[39m\u001b[43mInventoryItem\u001b[49m(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m手機套\u001b[39m\u001b[38;5;124m\"\u001b[39m,unit_price\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m150.5\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(item1)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(item1\u001b[38;5;241m.\u001b[39mname)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'InventoryItem' is not defined"
      ]
     }
    ],
