--- a/homework/issue192/issue 192.ipynb
+++ b/homework/issue192/issue 192.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'act': '1',\n",
+      " 'ar': '復興南路二段235號前',\n",
+      " 'aren': 'No.235， Sec. 2， Fuxing S. Rd.',\n",
+      " 'available_rent_bikes': 3,\n",
+      " 'available_return_bikes': 25,\n",
+      " 'infoDate': '2024-06-05',\n",
+      " 'infoTime': '2024-06-05 10:13:20',\n",
+      " 'latitude': 25.02605,\n",
+      " 'longitude': 121.5436,\n",
+      " 'mday': '2024-06-05 10:13:20',\n",
+      " 'sarea': '大安區',\n",
+      " 'sareaen': 'Daan Dist.',\n",
+      " 'sna': 'YouBike2.0_捷運科技大樓站',\n",
+      " 'snaen': 'YouBike2.0_MRT Technology Bldg. Sta.',\n",
+      " 'sno': '500101001',\n",
+      " 'srcUpdateTime': '2024-06-05 10:14:23',\n",
+      " 'total': 28,\n",
+      " 'updateTime': '2024-06-05 10:14:52'}\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    all_data:list[any] = download_json()\n",
