--- a/617/lesson2.ipynb
+++ b/617/lesson2.ipynb
@@ -18,7 +18,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt # type: ignore\n",
-    "import numpy as np\n",
+    "import numpy as np # type: ignore\n",
     "\n",
     "def func(pct, allvals):\n",
     "    absolute = int(np.round(pct/100.*np.sum(allvals)))\n",
