--- a/624/lesson2.ipynb
+++ b/624/lesson2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "invalid dsn: missing \"=\" after \"gpostgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv\" in connection info string\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpsycopg2\u001b[39;00m \n\u001b[1;32m----> 2\u001b[0m conn \u001b[38;5;241m=\u001b[39m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgpostgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m conn: \u001b[38;5;66;03m#with conn會自動commit(),手動close\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m conn\u001b[38;5;241m.\u001b[39mcursor() \u001b[38;5;28;01mas\u001b[39;00m cursor: \u001b[38;5;66;03m#自動close()\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\bhbin\\miniconda3\\envs\\venv1\\lib\\site-packages\\psycopg2\\__init__.py:121\u001b[0m, in \u001b[0;36mconnect\u001b[1;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[0;32m    118\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124masync_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m kwargs:\n\u001b[0;32m    119\u001b[0m     kwasync[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124masync_\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124masync_\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m--> 121\u001b[0m dsn \u001b[38;5;241m=\u001b[39m _ext\u001b[38;5;241m.\u001b[39mmake_dsn(dsn, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    122\u001b[0m conn \u001b[38;5;241m=\u001b[39m _connect(dsn, connection_factory\u001b[38;5;241m=\u001b[39mconnection_factory, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwasync)\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cursor_factory \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\bhbin\\miniconda3\\envs\\venv1\\lib\\site-packages\\psycopg2\\extensions.py:145\u001b[0m, in \u001b[0;36mmake_dsn\u001b[1;34m(dsn, **kwargs)\u001b[0m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;66;03m# If no kwarg is specified don't mung the dsn, but verify it\u001b[39;00m\n\u001b[0;32m    144\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kwargs:\n\u001b[1;32m--> 145\u001b[0m     \u001b[43mparse_dsn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdsn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    146\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m dsn\n\u001b[0;32m    148\u001b[0m \u001b[38;5;66;03m# Override the dsn with the parameters\u001b[39;00m\n",
+      "\u001b[1;31mProgrammingError\u001b[0m: invalid dsn: missing \"=\" after \"gpostgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv\" in connection info string\n"
+     ]
+    }
+   ],
    "source": [
-    "import psycopg2 # type: ignore\n",
+    "import psycopg2 \n",
     "conn = psycopg2.connect(\"gpostgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv\")\n",
     "with conn: #with conn會自動commit(),手動close\n",
     "    with conn.cursor() as cursor: #自動close()\n",
@@ -66,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
