--- a/702/lesson2.ipynb
+++ b/702/lesson2.ipynb
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "import psycopg2 \n",
+    "import psycopg2  # type: ignore\n",
     "conn = psycopg2.connect(\"gpostgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv\")\n",
     "with conn: #with conn會自動commit(),手動close\n",
     "    with conn.cursor() as cursor: #自動close()\n",
