--- a/702/lesson1.ipynb
+++ b/702/lesson1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
+    "import psycopg2 # type: ignore\n",
     "conn=psycopg2.connect('postgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv')\n",
     "cursor=conn.cursor()\n",
     "sql='''CREATE TABLE IF NOT EXISTS student (\n",
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
+    "import psycopg2 # type: ignore\n",
     "conn=psycopg2.connect('postgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv')\n",
     "with conn:#with conn會自動commit()\n",
     "   cursor=conn.cursor()\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
+    "import psycopg2 # type: ignore\n",
     "conn=psycopg2.connect('postgresql://tvdi_1bpv_user:fx1DSgq1dFkZ1A9xWfFbnuqYLJuHFjDs@dpg-cpscs9g8fa8c739532vg-a.singapore-postgres.render.com/tvdi_1bpv')\n",
     "with conn:#with conn會自動commit(),手動close\n",
     "   with conn.cursor() as cursor:#自動close()\n",
