--- a/715_dash/layout1.ipynb
+++ b/715_dash/layout1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x18cddb48450>"
+       "<IPython.lib.display.IFrame at 0x18cddc79ad0>"
       ]
      },
      "metadata": {},
@@ -78,6 +78,14 @@
     "})\n",
     "\n",
     "fig = px.bar(df, x=\"Fruit\", y=\"Amount\", color=\"City\", barmode=\"group\")\n",
+    "fig.update_layout(\n",
+    "    plot_bgcolor=colors['background'],\n",
+    "    paper_bgcolor=colors['background'],\n",
+    "    font_color = colors['text']\n",
+    "\n",
+    "\n",
+    ")\n",
+    "\n",
     "\n",
     "app.layout = html.Div(children=[\n",
     "    html.H1(children='Hello! Dash',\n",
