--- a/715_dash/layout2.ipynb
+++ b/715_dash/layout2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f50c9c2250>"
+       "<IPython.lib.display.IFrame at 0x2810c042e50>"
       ]
      },
      "metadata": {},
