--- a/715_dash/layout4.ipynb
+++ b/715_dash/layout4.ipynb
@@ -196,9 +196,9 @@
     }
    ],
    "source": [
-    "from dash import Dash,html,dcc\n",
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
+    "from dash import Dash,html,dcc # type: ignore\n",
+    "import pandas as pd # type: ignore\n",
+    "import plotly.express as px # type: ignore\n",
     "\n",
     "app = Dash(__name__)\n",
     "\n",
