--- a/715_dash/layout1.ipynb
+++ b/715_dash/layout1.ipynb
@@ -20,7 +20,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1fc47e146d0>"
+       "<IPython.lib.display.IFrame at 0x1bf8fa3df10>"
       ]
      },
      "metadata": {},
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x202198a0f10>"
+       "<IPython.lib.display.IFrame at 0x1bf9344f710>"
       ]
      },
      "metadata": {},
