--- a/722_dash callback/callback2.ipynb
+++ b/722_dash callback/callback2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,21 +165,21 @@
     {
      "data": {
       "text/plain": [
-       "0      NaN\n",
-       "14     NaN\n",
-       "28     NaN\n",
-       "42     NaN\n",
-       "56     NaN\n",
-       "        ..\n",
-       "3626   NaN\n",
-       "3640   NaN\n",
-       "3654   NaN\n",
-       "3668   NaN\n",
-       "3682   NaN\n",
-       "Name: Value, Length: 264, dtype: float64"
+       "0                           Arab World\n",
+       "14              Caribbean small states\n",
+       "28      Central Europe and the Baltics\n",
+       "42          Early-demographic dividend\n",
+       "56                 East Asia & Pacific\n",
+       "                     ...              \n",
+       "3626                    Virgin Islands\n",
+       "3640                West Bank and Gaza\n",
+       "3654                       Yemen, Rep.\n",
+       "3668                            Zambia\n",
+       "3682                          Zimbabwe\n",
+       "Name: Country Name, Length: 264, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,36 +187,15 @@
    "source": [
     "display(df)\n",
     "dff = df[df['Year'] == 1962]\n",
-    "dff[dff['Indicator Name'] == 'Agriculture, value added (% of GDP)']['Value']"
+    "dff[dff['Indicator Name'] == 'Agriculture, value added (% of GDP)']['Value']\n",
+    "dff[dff['Indicator Name'] == 'Agriculture, value added (% of GDP)']['Country Name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1464ffb8cd0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plotly.express as px\n",
     "\n",
@@ -278,8 +257,20 @@
     "    dff = df[df['Year'] == year_value]\n",
     "    xValue = dff[dff['Indicator Name'] == xaxis_column_name]['Value']\n",
     "    yValue = dff[dff['Indicator Name'] == yaxis_column_name]['Value']\n",
-    "    fig = px.scatter(x=xValue,\n",
-    "               y=yValue)\n",
+    "    hoverValue = dff[dff['Indicator Name'] == yaxis_column_name]['Country Name']\n",
+    "    fig = px.scatter(\n",
+    "                x=xValue,\n",
+    "                y=yValue,\n",
+    "                hover_name=hoverValue)\n",
+    "    \n",
+    "    fig.update_layout(margin={'l':40, 'b':40, 't':10, 'r':0},\n",
+    "                      hovermode='closest')\n",
+    "    \n",
+    "    fig.update_xaxes(title=xaxis_column_name,\n",
+    "                     type='linear' if xaxis_type == 'Linear' else 'log')\n",
+    "    \n",
+    "    fig.update_yaxes(title=yaxis_column_name,\n",
+    "                     type='linear' if yaxis_type == 'Linear' else 'log')\n",
     "    return fig\n",
     "\n",
     "    \n",
@@ -287,13 +278,6 @@
     "if __name__ == '__main__':\n",
     "    app.run(debug=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
